--- a/trunk/keyclick/config/x/cloudserver/app.ini
+++ b/trunk/keyclick/config/x/cloudserver/app.ini
@@ -4,7 +4,7 @@
 application_name = "keyclick_x"
 be_d = FALSE
 do_report_all_errors = TRUE
-superapp = "OscarDotNet_x"
+superapp = "OscarTRACK_x"
 
 [server]
 host_url = "https://frompaper2web.com"
