--- a/config/production/cloudserver/app.ini
+++ b/config/production/cloudserver/app.ini
@@ -4,7 +4,7 @@
 application_name = "keyclick"
 be_d = FALSE
 do_report_all_errors = FALSE
-superapp = "OscarDotNet"
+superapp = "OscarTRACK"
 
 [server]
 host_url = "https://frompaper2web.com"
