--- a/config/x/cloudserver/web.config
+++ b/config/x/cloudserver/web.config
@@ -37,4 +37,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.web>
+    <customErrors mode="Off"/>
+  </system.web>
 </configuration>
