--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,16 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/.svn
+*.dll.config
+*.pdb
+*.lnk
+*.user
+.svn/
+.vs/
+unpublished.*
+1-user-setup.sql
+/app.ini
+/bin/*/
+/obj/
+/packages/
+/web.config
