--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,26 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
+*.*-SAV
+*.bak
 *.dll.config
-*.pdb
 *.lnk
+*.log
+*.pdb
+*.SAV
 *.user
 .svn/
 .vs/
-unpublished.*
 1-user-setup.sql
+bin/*.xml
+bin/*/
+lib/ki/
+node_modules/
+obj/
+packages/
+unpublished.*
 /app.ini
-/bin/*/
-/bin/*.xml
-/lib/ki/
-/obj/
-/packages/
-/web.config
+/lib/emsi/
+/lib/oscalib/
+/usercontrol/ki/
+/Web.config
