Rearranged config files for consistency with other projects, and to isolate potential deployment stakeholders from configuration churn.

--- a/.gitignore
+++ b/.gitignore
@@ -12,16 +12,15 @@
 *.user
 .svn/
 .vs/
-1-user-setup.sql
 bin/*.xml
 bin/*/
 lib/ki/
 node_modules/
 obj/
 packages/
-unpublished.*
+/unpublished.*
 /app.ini
-/lib/emsi/
-/lib/oscalib/
-/usercontrol/ki/
 /Web.config
+/config/Sensitive/*.config
+/config/Sensitive/*.ini
+/config/Sensitive/*.sql
