--- a/web.DEV.config
+++ b/web.DEV.config
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-  <appSettings file="unpublished.config">
-    <add key="sender_email_address" value="keyclick_x@frompaper2web.com" />
-    <add key="smtp_server" value="localhost" />
-  </appSettings>
+  <!-- -->
+  <!-- Environment-dependent settings -->
+  <!-- -->
+  <appSettings configSource="Config\Detail\appSettings.DEV.config"/>
+  <system.net>
+    <mailSettings>
+      <!---->
+      <!-- The following mailSettings are for the DEV environment ONLY.  Remember to grant write access to this directory to the aplication pool account (ie, "ASP.NET v4.0") -->
+      <!---->
+      <smtp deliveryMethod="SpecifiedPickupDirectory">
+        <specifiedPickupDirectory pickupDirectoryLocation="C:\ProgramData\Marathon Consulting LLC\keyclick\mailrootQueue" />
+      </smtp>
+    </mailSettings>
+  </system.net>
+  <!-- -->
+  <connectionStrings configSource="Config\Sensitive\connectionStrings.config"/>
   <system.webServer>
     <handlers>
       <add name="PhpHandler" path="*.php" verb="*" type="Peachpie.RequestHandler.RequestHandler,Peachpie.RequestHandler"  resourceType="Unspecified" preCondition="integratedMode" />
@@ -44,7 +56,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <system.web>
-    <customErrors mode="Off"/>
-  </system.web>
 </configuration>
