--- a/web.PRODUCTION.config
+++ b/web.PRODUCTION.config
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-  <appSettings file="unpublished.config">
-    <add key="sender_email_address" value="keyclick@frompaper2web.com" />
-    <add key="smtp_server" value="localhost" />
-  </appSettings>
+  <!-- -->
+  <!-- Environment-dependent settings -->
+  <!-- -->
+  <appSettings configSource="Config\Detail\appSettings.PRODUCTION.config"/>
+  <!-- -->
+  <connectionStrings configSource="Config\Sensitive\connectionStrings.config"/>
   <system.webServer>
     <handlers>
       <add name="PhpHandler" path="*.php" verb="*" type="Peachpie.RequestHandler.RequestHandler,Peachpie.RequestHandler"  resourceType="Unspecified" preCondition="integratedMode" />
