--- a/web.X.config
+++ b/web.X.config
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-  <appSettings file="unpublished.config">
-    <add key="sender_email_address" value="keyclick_d@frompaper2web.com" />
-    <add key="smtp_server" value="localhost" />
-  </appSettings>
-  <system.net>
-    <mailSettings>
-      <!---->
-      <!-- The following mailSettings are for the DEVELOPMENT environment ONLY.  Remember to grant write access to this directory to the aplication pool account (ie, "ASP.NET v4.0") -->
-      <!---->
-      <smtp deliveryMethod="SpecifiedPickupDirectory">
-        <specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\mailroot\Queue" />
-      </smtp>
-    </mailSettings>
-  </system.net>
+  <!-- -->
+  <!-- Environment-dependent settings -->
+  <!-- -->
+  <appSettings configSource="Config\Detail\appSettings.X.config"/>
+  <!-- -->
+  <connectionStrings configSource="Config\Sensitive\connectionStrings.config"/>
   <system.webServer>
     <handlers>
       <add name="PhpHandler" path="*.php" verb="*" type="Peachpie.RequestHandler.RequestHandler,Peachpie.RequestHandler"  resourceType="Unspecified" preCondition="integratedMode" />
@@ -54,4 +46,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.web>
+    <customErrors mode="Off"/>
+  </system.web>
 </configuration>
