--- a/web.DEV.config
+++ b/web.DEV.config
@@ -6,12 +6,7 @@
   <appSettings configSource="Config\Detail\appSettings.DEV.config"/>
   <system.net>
     <mailSettings>
-      <!---->
-      <!-- The following mailSettings are for the DEV environment ONLY.  Remember to grant write access to this directory to the aplication pool account (ie, "ASP.NET v4.0") -->
-      <!---->
-      <smtp deliveryMethod="SpecifiedPickupDirectory">
-        <specifiedPickupDirectory pickupDirectoryLocation="C:\ProgramData\Marathon Consulting LLC\keyclick\mailrootQueue" />
-      </smtp>
+      <smtp configSource="Config\Detail\smtp.DEV.config"/>
     </mailSettings>
   </system.net>
   <!-- -->
